--- a/order-service/src/main/resources/application.yml
+++ b/order-service/src/main/resources/application.yml
@@ -11,6 +11,22 @@ management:
 spring:
   application:
     name: order-service
+  data:
+    mongodb:
+      host: mongodb
+      database: orderservice
+  kafka:
+#    consumer:
+#      bootstrap-servers: kafkabroker:9092
+#      group-id: order-service
+#      auto-offset-reset: earliest
+#      key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+#      value-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+    producer:
+      bootstrap-servers: kafkabroker:9092
+      key-serializer: org.apache.kafka.common.serialization.StringSerializer
+      value-serializer: org.apache.kafka.common.serialization.StringSerializer
+
 
 info:
   version: @pom.version@
