--- a/delivery-service/src/main/resources/application.yml
+++ b/delivery-service/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 server:
   compression:
     enabled: true
-  port: 8090
+  port: 8070
 
 management:
   endpoints:
@@ -10,15 +10,15 @@ management:
         include: "*"
 spring:
   application:
-    name: order-service
+    name: delivery-service
   data:
     mongodb:
       host: mongodb
-      database: orderservice
+      database: deliveryservice
   kafka:
     consumer:
       bootstrap-servers: kafkabroker:9092
-      group-id: order-service
+      group-id: delivery-service
       auto-offset-reset: earliest
       key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
       value-deserializer: org.apache.kafka.common.serialization.StringDeserializer
