--- a/order-service/src/main/resources/application.yml
+++ b/order-service/src/main/resources/application.yml
@@ -8,7 +8,14 @@ management:
     web:
       exposure:
         include: "*"
+
+
 spring:
+  cloud:
+    stream:
+      kafka:
+        binder:
+          autoCreateTopics: false
   application:
     name: order-service
   data:
