some architectural  fix

--- a/delivery-service/src/main/resources/application.yml
+++ b/delivery-service/src/main/resources/application.yml
@@ -13,7 +13,7 @@ spring:
     name: delivery-service
   data:
     mongodb:
-      host: mongodb
+      host: mongodb-delivery
       database: deliveryservice
   kafka:
     consumer:
